Apply MDJ's code review comments and changes from VDYP-720-Batch-Review to the latest batch code.